parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ARRAY
    HASH
    Uminus

Grammar

Rule 0     S' -> program
Rule 1     program -> statements
Rule 2     statement -> expression optional_semicolon
Rule 3     statement -> assign_stmt
Rule 4     statement -> statement_index_assign
Rule 5     statement -> disp_stmt
Rule 6     statement -> entry_stmt
Rule 7     statement -> If_Else_stmt
Rule 8     statement -> while_stmt
Rule 9     statement -> block
Rule 10    statement -> function_stmt
Rule 11    statement -> for_stmt
Rule 12    statement -> continue_stmt
Rule 13    statement -> break_stmt
Rule 14    statement -> return_stmt
Rule 15    statement -> call_stmt
Rule 16    statements -> statement
Rule 17    statements -> statements statement
Rule 18    statement -> empty
Rule 19    disp_stmt -> DISP LPAREN expression RPAREN optional_semicolon
Rule 20    entry_stmt -> ENTRY LPAREN expression RPAREN optional_semicolon
Rule 21    entry_stmt -> ENTRY optional_semicolon
Rule 22    expression -> variable
Rule 23    expression -> bin_ops
Rule 24    expression -> LPAREN expression RPAREN
Rule 25    variable -> INT
Rule 26    variable -> STR
Rule 27    variable -> BOOL
Rule 28    variable -> ID
Rule 29    variable -> FLOAT
Rule 30    block -> LBRACE statements RBRACE
Rule 31    If_Else_stmt -> IF expression block
Rule 32    If_Else_stmt -> IF expression block ELSE block
Rule 33    while_stmt -> WHILE expression block
Rule 34    for_stmt -> FOR LPAREN statement expression SEMICOLON statement RPAREN block
Rule 35    for_stmt -> FOR expression block
Rule 36    continue_stmt -> CONT optional_semicolon
Rule 37    break_stmt -> BREAK optional_semicolon
Rule 38    return_stmt -> RETURN expression optional_semicolon
Rule 39    return_stmt -> RETURN optional_semicolon
Rule 40    expression -> NOT expression
Rule 41    expression -> SUB expression
Rule 42    param -> ID COLON type ASSIGN expression
Rule 43    param -> ID COLON type
Rule 44    param -> ID ASSIGN expression
Rule 45    param -> ID
Rule 46    params -> param
Rule 47    params -> params COMMA param
Rule 48    param_list -> LBRACKET params RBRACKET
Rule 49    param_list -> LBRACKET empty RBRACKET
Rule 50    function_stmt -> FUNCTION ID COLON type param_list COLON block
Rule 51    function_stmt -> FUNCTION ID param_list COLON block
Rule 52    args -> expression
Rule 53    args -> args COMMA expression
Rule 54    arg_list -> args
Rule 55    arg_list -> empty
Rule 56    call_stmt -> ID LPAREN arg_list RPAREN
Rule 57    expression -> call_stmt
Rule 58    bin_ops -> expression ADD expression
Rule 59    bin_ops -> expression SUB expression
Rule 60    bin_ops -> expression MUL expression
Rule 61    bin_ops -> expression DIV expression
Rule 62    bin_ops -> expression MOD expression
Rule 63    bin_ops -> expression POW expression
Rule 64    bin_ops -> expression GT expression
Rule 65    bin_ops -> expression LT expression
Rule 66    bin_ops -> expression GE expression
Rule 67    bin_ops -> expression LE expression
Rule 68    bin_ops -> expression EQ expression
Rule 69    bin_ops -> expression NE expression
Rule 70    bin_ops -> expression AND expression
Rule 71    bin_ops -> expression OR expression
Rule 72    type -> INT_TYPE
Rule 73    type -> STR_TYPE
Rule 74    type -> BOOL_TYPE
Rule 75    type -> FLOAT_TYPE
Rule 76    type -> VOID_TYPE
Rule 77    type -> type_array
Rule 78    type -> type_hash
Rule 79    type_array -> type ARRAY_TYPE LBRACKET INT RBRACKET
Rule 80    type_array -> type ARRAY_TYPE
Rule 81    type_hash -> HASH_TYPE LBRACKET type COMMA type RBRACKET
Rule 82    type_hash -> HASH_TYPE
Rule 83    assign_stmt -> LET ID COLON type ASSIGN expression optional_semicolon
Rule 84    assign_stmt -> LET ID ASSIGN expression optional_semicolon
Rule 85    assign_stmt -> ID ASSIGN expression optional_semicolon
Rule 86    expression -> LBRACKET args RBRACKET
Rule 87    expression -> LBRACKET empty RBRACKET
Rule 88    expression -> expression LBRACKET expression RBRACKET
Rule 89    statement_index_assign -> expression LBRACKET expression RBRACKET ASSIGN expression optional_semicolon
Rule 90    expression -> expression DOT ID LPAREN arg_list RPAREN
Rule 91    expression -> LBRACE hash_elements RBRACE
Rule 92    expression -> LBRACE empty RBRACE
Rule 93    hash_element -> expression COLON expression
Rule 94    hash_elements -> hash_element
Rule 95    hash_elements -> hash_elements COMMA hash_element
Rule 96    empty -> <empty>
Rule 97    optional_semicolon -> SEMICOLON
Rule 98    optional_semicolon -> empty

Terminals, with rules where they appear

ADD                  : 58
AND                  : 70
ARRAY                : 
ARRAY_TYPE           : 79 80
ASSIGN               : 42 44 83 84 85 89
BOOL                 : 27
BOOL_TYPE            : 74
BREAK                : 37
COLON                : 42 43 50 50 51 83 93
COMMA                : 47 53 81 95
CONT                 : 36
DISP                 : 19
DIV                  : 61
DOT                  : 90
ELSE                 : 32
ENTRY                : 20 21
EQ                   : 68
FLOAT                : 29
FLOAT_TYPE           : 75
FOR                  : 34 35
FUNCTION             : 50 51
GE                   : 66
GT                   : 64
HASH                 : 
HASH_TYPE            : 81 82
ID                   : 28 42 43 44 45 50 51 56 83 84 85 90
IF                   : 31 32
INT                  : 25 79
INT_TYPE             : 72
LBRACE               : 30 91 92
LBRACKET             : 48 49 79 81 86 87 88 89
LE                   : 67
LET                  : 83 84
LPAREN               : 19 20 24 34 56 90
LT                   : 65
MOD                  : 62
MUL                  : 60
NE                   : 69
NOT                  : 40
OR                   : 71
POW                  : 63
RBRACE               : 30 91 92
RBRACKET             : 48 49 79 81 86 87 88 89
RETURN               : 38 39
RPAREN               : 19 20 24 34 56 90
SEMICOLON            : 34 97
STR                  : 26
STR_TYPE             : 73
SUB                  : 41 59
Uminus               : 
VOID_TYPE            : 76
WHILE                : 33
error                : 

Nonterminals, with rules where they appear

If_Else_stmt         : 7
arg_list             : 56 90
args                 : 53 54 86
assign_stmt          : 3
bin_ops              : 23
block                : 9 31 32 32 33 34 35 50 51
break_stmt           : 13
call_stmt            : 15 57
continue_stmt        : 12
disp_stmt            : 5
empty                : 18 49 55 87 92 98
entry_stmt           : 6
expression           : 2 19 20 24 31 32 33 34 35 38 40 41 42 44 52 53 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 65 66 66 67 67 68 68 69 69 70 70 71 71 83 84 85 88 88 89 89 89 90 93 93
for_stmt             : 11
function_stmt        : 10
hash_element         : 94 95
hash_elements        : 91 95
optional_semicolon   : 2 19 20 21 36 37 38 39 83 84 85 89
param                : 46 47
param_list           : 50 51
params               : 47 48
program              : 0
return_stmt          : 14
statement            : 16 17 34 34
statement_index_assign : 4
statements           : 1 17 30
type                 : 42 43 50 79 80 81 81 83
type_array           : 77
type_hash            : 78
variable             : 22
while_stmt           : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statements
    (16) statements -> . statement
    (17) statements -> . statements statement
    (2) statement -> . expression optional_semicolon
    (3) statement -> . assign_stmt
    (4) statement -> . statement_index_assign
    (5) statement -> . disp_stmt
    (6) statement -> . entry_stmt
    (7) statement -> . If_Else_stmt
    (8) statement -> . while_stmt
    (9) statement -> . block
    (10) statement -> . function_stmt
    (11) statement -> . for_stmt
    (12) statement -> . continue_stmt
    (13) statement -> . break_stmt
    (14) statement -> . return_stmt
    (15) statement -> . call_stmt
    (18) statement -> . empty
    (22) expression -> . variable
    (23) expression -> . bin_ops
    (24) expression -> . LPAREN expression RPAREN
    (40) expression -> . NOT expression
    (41) expression -> . SUB expression
    (57) expression -> . call_stmt
    (86) expression -> . LBRACKET args RBRACKET
    (87) expression -> . LBRACKET empty RBRACKET
    (88) expression -> . expression LBRACKET expression RBRACKET
    (90) expression -> . expression DOT ID LPAREN arg_list RPAREN
    (91) expression -> . LBRACE hash_elements RBRACE
    (92) expression -> . LBRACE empty RBRACE
    (83) assign_stmt -> . LET ID COLON type ASSIGN expression optional_semicolon
    (84) assign_stmt -> . LET ID ASSIGN expression optional_semicolon
    (85) assign_stmt -> . ID ASSIGN expression optional_semicolon
    (89) statement_index_assign -> . expression LBRACKET expression RBRACKET ASSIGN expression optional_semicolon
    (19) disp_stmt -> . DISP LPAREN expression RPAREN optional_semicolon
    (20) entry_stmt -> . ENTRY LPAREN expression RPAREN optional_semicolon
    (21) entry_stmt -> . ENTRY optional_semicolon
    (31) If_Else_stmt -> . IF expression block
    (32) If_Else_stmt -> . IF expression block ELSE block
    (33) while_stmt -> . WHILE expression block
    (30) block -> . LBRACE statements RBRACE
    (50) function_stmt -> . FUNCTION ID COLON type param_list COLON block
    (51) function_stmt -> . FUNCTION ID param_list COLON block
    (34) for_stmt -> . FOR LPAREN statement expression SEMICOLON statement RPAREN block
    (35) for_stmt -> . FOR expression block
    (36) continue_stmt -> . CONT optional_semicolon
    (37) break_stmt -> . BREAK optional_semicolon
    (38) return_stmt -> . RETURN expression optional_semicolon
    (39) return_stmt -> . RETURN optional_semicolon
    (56) call_stmt -> . ID LPAREN arg_list RPAREN
    (96) empty -> .
    (25) variable -> . INT
    (26) variable -> . STR
    (27) variable -> . BOOL
    (28) variable -> . ID
    (29) variable -> . FLOAT
    (58) bin_ops -> . expression ADD expression
    (59) bin_ops -> . expression SUB expression
    (60) bin_ops -> . expression MUL expression
    (61) bin_ops -> . expression DIV expression
    (62) bin_ops -> . expression MOD expression
    (63) bin_ops -> . expression POW expression
    (64) bin_ops -> . expression GT expression
    (65) bin_ops -> . expression LT expression
    (66) bin_ops -> . expression GE expression
    (67) bin_ops -> . expression LE expression
    (68) bin_ops -> . expression EQ expression
    (69) bin_ops -> . expression NE expression
    (70) bin_ops -> . expression AND expression
    (71) bin_ops -> . expression OR expression

  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for DISP resolved as shift
  ! shift/reduce conflict for ENTRY resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for CONT resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STR resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
    LPAREN          shift and go to state 21
    NOT             shift and go to state 22
    SUB             shift and go to state 23
    LBRACKET        shift and go to state 24
    LBRACE          shift and go to state 26
    LET             shift and go to state 27
    ID              shift and go to state 25
    DISP            shift and go to state 28
    ENTRY           shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FUNCTION        shift and go to state 32
    FOR             shift and go to state 33
    CONT            shift and go to state 34
    BREAK           shift and go to state 35
    RETURN          shift and go to state 36
    $end            reduce using rule 96 (empty -> .)
    INT             shift and go to state 37
    STR             shift and go to state 38
    BOOL            shift and go to state 39
    FLOAT           shift and go to state 40

  ! LPAREN          [ reduce using rule 96 (empty -> .) ]
  ! NOT             [ reduce using rule 96 (empty -> .) ]
  ! SUB             [ reduce using rule 96 (empty -> .) ]
  ! LBRACKET        [ reduce using rule 96 (empty -> .) ]
  ! LBRACE          [ reduce using rule 96 (empty -> .) ]
  ! LET             [ reduce using rule 96 (empty -> .) ]
  ! ID              [ reduce using rule 96 (empty -> .) ]
  ! DISP            [ reduce using rule 96 (empty -> .) ]
  ! ENTRY           [ reduce using rule 96 (empty -> .) ]
  ! IF              [ reduce using rule 96 (empty -> .) ]
  ! WHILE           [ reduce using rule 96 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 96 (empty -> .) ]
  ! FOR             [ reduce using rule 96 (empty -> .) ]
  ! CONT            [ reduce using rule 96 (empty -> .) ]
  ! BREAK           [ reduce using rule 96 (empty -> .) ]
  ! RETURN          [ reduce using rule 96 (empty -> .) ]
  ! INT             [ reduce using rule 96 (empty -> .) ]
  ! STR             [ reduce using rule 96 (empty -> .) ]
  ! BOOL            [ reduce using rule 96 (empty -> .) ]
  ! FLOAT           [ reduce using rule 96 (empty -> .) ]

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 4
    assign_stmt                    shift and go to state 5
    statement_index_assign         shift and go to state 6
    disp_stmt                      shift and go to state 7
    entry_stmt                     shift and go to state 8
    If_Else_stmt                   shift and go to state 9
    while_stmt                     shift and go to state 10
    block                          shift and go to state 11
    function_stmt                  shift and go to state 12
    for_stmt                       shift and go to state 13
    continue_stmt                  shift and go to state 14
    break_stmt                     shift and go to state 15
    return_stmt                    shift and go to state 16
    call_stmt                      shift and go to state 17
    empty                          shift and go to state 18
    variable                       shift and go to state 19
    bin_ops                        shift and go to state 20

state 1

    (0) S' -> program .



state 2

    (1) program -> statements .
    (17) statements -> statements . statement
    (2) statement -> . expression optional_semicolon
    (3) statement -> . assign_stmt
    (4) statement -> . statement_index_assign
    (5) statement -> . disp_stmt
    (6) statement -> . entry_stmt
    (7) statement -> . If_Else_stmt
    (8) statement -> . while_stmt
    (9) statement -> . block
    (10) statement -> . function_stmt
    (11) statement -> . for_stmt
    (12) statement -> . continue_stmt
    (13) statement -> . break_stmt
    (14) statement -> . return_stmt
    (15) statement -> . call_stmt
    (18) statement -> . empty
    (22) expression -> . variable
    (23) expression -> . bin_ops
    (24) expression -> . LPAREN expression RPAREN
    (40) expression -> . NOT expression
    (41) expression -> . SUB expression
    (57) expression -> . call_stmt
    (86) expression -> . LBRACKET args RBRACKET
    (87) expression -> . LBRACKET empty RBRACKET
    (88) expression -> . expression LBRACKET expression RBRACKET
    (90) expression -> . expression DOT ID LPAREN arg_list RPAREN
    (91) expression -> . LBRACE hash_elements RBRACE
    (92) expression -> . LBRACE empty RBRACE
    (83) assign_stmt -> . LET ID COLON type ASSIGN expression optional_semicolon
    (84) assign_stmt -> . LET ID ASSIGN expression optional_semicolon
    (85) assign_stmt -> . ID ASSIGN expression optional_semicolon
    (89) statement_index_assign -> . expression LBRACKET expression RBRACKET ASSIGN expression optional_semicolon
    (19) disp_stmt -> . DISP LPAREN expression RPAREN optional_semicolon
    (20) entry_stmt -> . ENTRY LPAREN expression RPAREN optional_semicolon
    (21) entry_stmt -> . ENTRY optional_semicolon
    (31) If_Else_stmt -> . IF expression block
    (32) If_Else_stmt -> . IF expression block ELSE block
    (33) while_stmt -> . WHILE expression block
    (30) block -> . LBRACE statements RBRACE
    (50) function_stmt -> . FUNCTION ID COLON type param_list COLON block
    (51) function_stmt -> . FUNCTION ID param_list COLON block
    (34) for_stmt -> . FOR LPAREN statement expression SEMICOLON statement RPAREN block
    (35) for_stmt -> . FOR expression block
    (36) continue_stmt -> . CONT optional_semicolon
    (37) break_stmt -> . BREAK optional_semicolon
    (38) return_stmt -> . RETURN expression optional_semicolon
    (39) return_stmt -> . RETURN optional_semicolon
    (56) call_stmt -> . ID LPAREN arg_list RPAREN
    (96) empty -> .
    (25) variable -> . INT
    (26) variable -> . STR
    (27) variable -> . BOOL
    (28) variable -> . ID
    (29) variable -> . FLOAT
    (58) bin_ops -> . expression ADD expression
    (59) bin_ops -> . expression SUB expression
    (60) bin_ops -> . expression MUL expression
    (61) bin_ops -> . expression DIV expression
    (62) bin_ops -> . expression MOD expression
    (63) bin_ops -> . expression POW expression
    (64) bin_ops -> . expression GT expression
    (65) bin_ops -> . expression LT expression
    (66) bin_ops -> . expression GE expression
    (67) bin_ops -> . expression LE expression
    (68) bin_ops -> . expression EQ expression
    (69) bin_ops -> . expression NE expression
    (70) bin_ops -> . expression AND expression
    (71) bin_ops -> . expression OR expression

  ! shift/reduce conflict for LPAREN resolved as shift
  ! shift/reduce conflict for NOT resolved as shift
  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
  ! shift/reduce conflict for LBRACE resolved as shift
  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for DISP resolved as shift
  ! shift/reduce conflict for ENTRY resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for CONT resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 1 (program -> statements .)
  ! shift/reduce conflict for INT resolved as shift
  ! shift/reduce conflict for STR resolved as shift
  ! shift/reduce conflict for BOOL resolved as shift
  ! shift/reduce conflict for FLOAT resolved as shift
    $end            reduce using rule 1 (program -> statements .)
    LPAREN          shift and go to state 21
    NOT             shift and go to state 22
    SUB             shift and go to state 23
    LBRACKET        shift and go to state 24
    LBRACE          shift and go to state 26
    LET             shift and go to state 27
    ID              shift and go to state 25
    DISP            shift and go to state 28
    ENTRY           shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FUNCTION        shift and go to state 32
    FOR             shift and go to state 33
    CONT            shift and go to state 34
    BREAK           shift and go to state 35
    RETURN          shift and go to state 36
    INT             shift and go to state 37
    STR             shift and go to state 38
    BOOL            shift and go to state 39
    FLOAT           shift and go to state 40

  ! LPAREN          [ reduce using rule 96 (empty -> .) ]
  ! NOT             [ reduce using rule 96 (empty -> .) ]
  ! SUB             [ reduce using rule 96 (empty -> .) ]
  ! LBRACKET        [ reduce using rule 96 (empty -> .) ]
  ! LBRACE          [ reduce using rule 96 (empty -> .) ]
  ! LET             [ reduce using rule 96 (empty -> .) ]
  ! ID              [ reduce using rule 96 (empty -> .) ]
  ! DISP            [ reduce using rule 96 (empty -> .) ]
  ! ENTRY           [ reduce using rule 96 (empty -> .) ]
  ! IF              [ reduce using rule 96 (empty -> .) ]
  ! WHILE           [ reduce using rule 96 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 96 (empty -> .) ]
  ! FOR             [ reduce using rule 96 (empty -> .) ]
  ! CONT            [ reduce using rule 96 (empty -> .) ]
  ! BREAK           [ reduce using rule 96 (empty -> .) ]
  ! RETURN          [ reduce using rule 96 (empty -> .) ]
  ! INT             [ reduce using rule 96 (empty -> .) ]
  ! STR             [ reduce using rule 96 (empty -> .) ]
  ! BOOL            [ reduce using rule 96 (empty -> .) ]
  ! FLOAT           [ reduce using rule 96 (empty -> .) ]
  ! $end            [ reduce using rule 96 (empty -> .) ]

    statement                      shift and go to state 41
    expression                     shift and go to state 4
    assign_stmt                    shift and go to state 5
    statement_index_assign         shift and go to state 6
    disp_stmt                      shift and go to state 7
    entry_stmt                     shift and go to state 8
    If_Else_stmt                   shift and go to state 9
    while_stmt                     shift and go to state 10
    block                          shift and go to state 11
    function_stmt                  shift and go to state 12
    for_stmt                       shift and go to state 13
    continue_stmt                  shift and go to state 14
    break_stmt                     shift and go to state 15
    return_stmt                    shift and go to state 16
    call_stmt                      shift and go to state 17
    empty                          shift and go to state 18
    variable                       shift and go to state 19
    bin_ops                        shift and go to state 20

state 3

    (16) statements -> statement .

    LPAREN          reduce using rule 16 (statements -> statement .)
    NOT             reduce using rule 16 (statements -> statement .)
    SUB             reduce using rule 16 (statements -> statement .)
    LBRACKET        reduce using rule 16 (statements -> statement .)
    LBRACE          reduce using rule 16 (statements -> statement .)
    LET             reduce using rule 16 (statements -> statement .)
    ID              reduce using rule 16 (statements -> statement .)
    DISP            reduce using rule 16 (statements -> statement .)
    ENTRY           reduce using rule 16 (statements -> statement .)
    IF              reduce using rule 16 (statements -> statement .)
    WHILE           reduce using rule 16 (statements -> statement .)
    FUNCTION        reduce using rule 16 (statements -> statement .)
    FOR             reduce using rule 16 (statements -> statement .)
    CONT            reduce using rule 16 (statements -> statement .)
    BREAK           reduce using rule 16 (statements -> statement .)
    RETURN          reduce using rule 16 (statements -> statement .)
    INT             reduce using rule 16 (statements -> statement .)
    STR             reduce using rule 16 (statements -> statement .)
    BOOL            reduce using rule 16 (statements -> statement .)
    FLOAT           reduce using rule 16 (statements -> statement .)
    $end            reduce using rule 16 (statements -> statement .)
    RBRACE          reduce using rule 16 (statements -> statement .)


state 4

    (2) statement -> expression . optional_semicolon
    (88) expression -> expression . LBRACKET expression RBRACKET
    (90) expression -> expression . DOT ID LPAREN arg_list RPAREN
    (89) statement_index_assign -> expression . LBRACKET expression RBRACKET ASSIGN expression optional_semicolon
    (58) bin_ops -> expression . ADD expression
    (59) bin_ops -> expression . SUB expression
    (60) bin_ops -> expression . MUL expression
    (61) bin_ops -> expression . DIV expression
    (62) bin_ops -> expression . MOD expression
    (63) bin_ops -> expression . POW expression
    (64) bin_ops -> expression . GT expression
    (65) bin_ops -> expression . LT expression
    (66) bin_ops -> expression . GE expression
    (67) bin_ops -> expression . LE expression
    (68) bin_ops -> expression . EQ expression
    (69) bin_ops -> expression . NE expression
    (70) bin_ops -> expression . AND expression
    (71) bin_ops -> expression . OR expression
    (97) optional_semicolon -> . SEMICOLON
    (98) optional_semicolon -> . empty
    (96) empty -> .

  ! shift/reduce conflict for SUB resolved as shift
  ! shift/reduce conflict for LBRACKET resolved as shift
    LBRACKET        shift and go to state 43
    DOT             shift and go to state 44
    ADD             shift and go to state 45
    SUB             shift and go to state 46
    MUL             shift and go to state 47
    DIV             shift and go to state 48
    MOD             shift and go to state 49
    POW             shift and go to state 50
    GT              shift and go to state 51
    LT              shift and go to state 52
    GE              shift and go to state 53
    LE              shift and go to state 54
    EQ              shift and go to state 55
    NE              shift and go to state 56
    AND             shift and go to state 57
    OR              shift and go to state 58
    SEMICOLON       shift and go to state 59
    LPAREN          reduce using rule 96 (empty -> .)
    NOT             reduce using rule 96 (empty -> .)
    LBRACE          reduce using rule 96 (empty -> .)
    LET             reduce using rule 96 (empty -> .)
    ID              reduce using rule 96 (empty -> .)
    DISP            reduce using rule 96 (empty -> .)
    ENTRY           reduce using rule 96 (empty -> .)
    IF              reduce using rule 96 (empty -> .)
    WHILE           reduce using rule 96 (empty -> .)
    FUNCTION        reduce using rule 96 (empty -> .)
    FOR             reduce using rule 96 (empty -> .)
    CONT            reduce using rule 96 (empty -> .)
    BREAK           reduce using rule 96 (empty -> .)
    RETURN          reduce using rule 96 (empty -> .)
    INT             reduce using rule 96 (empty -> .)
    STR             reduce using rule 96 (empty -> .)
    BOOL            reduce using rule 96 (empty -> .)
    FLOAT           reduce using rule 96 (empty -> .)
    $end            reduce using rule 96 (empty -> .)
    RBRACE          reduce using rule 96 (empty -> .)
    RPAREN          reduce using rule 96 (empty -> .)

  ! SUB             [ reduce using rule 96 (empty -> .) ]
  ! LBRACKET        [ reduce using rule 96 (empty -> .) ]

    optional_semicolon             shift and go to state 42
    empty                          shift and go to state 60

state 5

    (3) statement -> assign_stmt .

    LPAREN          reduce using rule 3 (statement -> assign_stmt .)
    NOT             reduce using rule 3 (statement -> assign_stmt .)
    SUB             reduce using rule 3 (statement -> assign_stmt .)
    LBRACKET        reduce using rule 3 (statement -> assign_stmt .)
    LBRACE          reduce using rule 3 (statement -> assign_stmt .)
    LET             reduce using rule 3 (statement -> assign_stmt .)
    ID              reduce using rule 3 (statement -> assign_stmt .)
    DISP            reduce using rule 3 (statement -> assign_stmt .)
    ENTRY           reduce using rule 3 (statement -> assign_stmt .)
    IF              reduce using rule 3 (statement -> assign_stmt .)
    WHILE           reduce using rule 3 (statement -> assign_stmt .)
    FUNCTION        reduce using rule 3 (statement -> assign_stmt .)
    FOR             reduce using rule 3 (statement -> assign_stmt .)
    CONT            reduce using rule 3 (statement -> assign_stmt .)
    BREAK           reduce using rule 3 (statement -> assign_stmt .)
    RETURN          reduce using rule 3 (statement -> assign_stmt .)
    INT             reduce using rule 3 (statement -> assign_stmt .)
    STR             reduce using rule 3 (statement -> assign_stmt .)
    BOOL            reduce using rule 3 (statement -> assign_stmt .)
    FLOAT           reduce using rule 3 (statement -> assign_stmt .)
    $end            reduce using rule 3 (statement -> assign_stmt .)
    RBRACE          reduce using rule 3 (statement -> assign_stmt .)
    RPAREN          reduce using rule 3 (statement -> assign_stmt .)


state 6

    (4) statement -> statement_index_assign .

    LPAREN          reduce using rule 4 (statement -> statement_index_assign .)
    NOT             reduce using rule 4 (statement -> statement_index_assign .)
    SUB             reduce using rule 4 (statement -> statement_index_assign .)
    LBRACKET        reduce using rule 4 (statement -> statement_index_assign .)
    LBRACE          reduce using rule 4 (statement -> statement_index_assign .)
    LET             reduce using rule 4 (statement -> statement_index_assign .)
    ID              reduce using rule 4 (statement -> statement_index_assign .)
    DISP            reduce using rule 4 (statement -> statement_index_assign .)
    ENTRY           reduce using rule 4 (statement -> statement_index_assign .)
    IF              reduce using rule 4 (statement -> statement_index_assign .)
    WHILE           reduce using rule 4 (statement -> statement_index_assign .)
    FUNCTION        reduce using rule 4 (statement -> statement_index_assign .)
    FOR             reduce using rule 4 (statement -> statement_index_assign .)
    CONT            reduce using rule 4 (statement -> statement_index_assign .)
    BREAK           reduce using rule 4 (statement -> statement_index_assign .)
    RETURN          reduce using rule 4 (statement -> statement_index_assign .)
    INT             reduce using rule 4 (statement -> statement_index_assign .)
    STR             reduce using rule 4 (statement -> statement_index_assign .)
    BOOL            reduce using rule 4 (statement -> statement_index_assign .)
    FLOAT           reduce using rule 4 (statement -> statement_index_assign .)
    $end            reduce using rule 4 (statement -> statement_index_assign .)
    RBRACE          reduce using rule 4 (statement -> statement_index_assign .)
    RPAREN          reduce using rule 4 (statement -> statement_index_assign .)


state 7

    (5) statement -> disp_stmt .

    LPAREN          reduce using rule 5 (statement -> disp_stmt .)
    NOT             reduce using rule 5 (statement -> disp_stmt .)
    SUB             reduce using rule 5 (statement -> disp_stmt .)
    LBRACKET        reduce using rule 5 (statement -> disp_stmt .)
    LBRACE          reduce using rule 5 (statement -> disp_stmt .)
    LET             reduce using rule 5 (statement -> disp_stmt .)
    ID              reduce using rule 5 (statement -> disp_stmt .)
    DISP            reduce using rule 5 (statement -> disp_stmt .)
    ENTRY           reduce using rule 5 (statement -> disp_stmt .)
    IF              reduce using rule 5 (statement -> disp_stmt .)
    WHILE           reduce using rule 5 (statement -> disp_stmt .)
    FUNCTION        reduce using rule 5 (statement -> disp_stmt .)
    FOR             reduce using rule 5 (statement -> disp_stmt .)
    CONT            reduce using rule 5 (statement -> disp_stmt .)
    BREAK           reduce using rule 5 (statement -> disp_stmt .)
    RETURN          reduce using rule 5 (statement -> disp_stmt .)
    INT             reduce using rule 5 (statement -> disp_stmt .)
    STR             reduce using rule 5 (statement -> disp_stmt .)
    BOOL            reduce using rule 5 (statement -> disp_stmt .)
    FLOAT           reduce using rule 5 (statement -> disp_stmt .)
    $end            reduce using rule 5 (statement -> disp_stmt .)
    RBRACE          reduce using rule 5 (statement -> disp_stmt .)
    RPAREN          reduce using rule 5 (statement -> disp_stmt .)


state 8

    (6) statement -> entry_stmt .

    LPAREN          reduce using rule 6 (statement -> entry_stmt .)
    NOT             reduce using rule 6 (statement -> entry_stmt .)
    SUB             reduce using rule 6 (statement -> entry_stmt .)
    LBRACKET        reduce using rule 6 (statement -> entry_stmt .)
    LBRACE          reduce using rule 6 (statement -> entry_stmt .)
    LET             reduce using rule 6 (statement -> entry_stmt .)
    ID              reduce using rule 6 (statement -> entry_stmt .)
    DISP            reduce using rule 6 (statement -> entry_stmt .)
    ENTRY           reduce using rule 6 (statement -> entry_stmt .)
    IF              reduce using rule 6 (statement -> entry_stmt .)
    WHILE           reduce using rule 6 (statement -> entry_stmt .)
    FUNCTION        reduce using rule 6 (statement -> entry_stmt .)
    FOR             reduce using rule 6 (statement -> entry_stmt .)
    CONT            reduce using rule 6 (statement -> entry_stmt .)
    BREAK           reduce using rule 6 (statement -> entry_stmt .)
    RETURN          reduce using rule 6 (statement -> entry_stmt .)
    INT             reduce using rule 6 (statement -> entry_stmt .)
    STR             reduce using rule 6 (statement -> entry_stmt .)
    BOOL            reduce using rule 6 (statement -> entry_stmt .)
    FLOAT           reduce using rule 6 (statement -> entry_stmt .)
    $end            reduce using rule 6 (statement -> entry_stmt .)
    RBRACE          reduce using rule 6 (statement -> entry_stmt .)
    RPAREN          reduce using rule 6 (statement -> entry_stmt .)


state 9

    (7) statement -> If_Else_stmt .
